# linux_notes

./: .gitignore  README.md  run.sh
esp32_template/esp32s3/: Readme.md
linux_bare_demo/: .mxproject  bug.md  configuration.md  flash.cfg  test.ioc
linux_bare_demo/Core/Src/: main.c
linux_bare_demo/User/Device/: CMakeLists.txt
linux_freertos_demo_103/: .mxproject  CMakeLists.txt  Readme.md  STM32F103.svd  STM32F103XX_FLASH.ld  flash.cfg  linux_freertos_demo_103.ioc  run.sh
linux_freertos_demo_103/Core/Src/: gpio.c  main.c
linux_freertos_demo_103/cmake/stm32cubemx/: CMakeLists.txt
notes/: thinkpad_battery.md
notes/Common_Sense/: CMake作用.md  compiler_intrduce.md  language_express.md  机器狗如何爬台阶的理论挣扎.md  硬件设计理解.md
notes/Embodied_Intelligence/: 技术栈以及初步认识.md  理解与总揽.md  配置.md
notes/dog/: task_to_do.md  爬行步态.md  环境配置.md  电机节点代码框架提示词.md  要学的东西.md  要求.md  账号和密码.md  远程控制.md
notes/dog/代码编写/: 任务思考以及需要做的事.md  抬头问题.md  电机初始化.md
notes/dog/代码阅读/: launch配置阅读.md  sdk阅读.md  xml文件阅读.md
notes/dog/环境配置以及移植/: launch文件夹移植.md  serial_node移植.md  source文件移植.md  unittree_go_1.md  环境配置.md
notes/dog/电机/: 电机初步使用.md  限位.md
notes/dog/调试/: 串口使用.md  宇树电机不同发送函数的测试.md
notes/dog/难题/: 听不懂的环境配置.md  如何切换python环境.md
notes/dog/难题攻克/: 判断性能是否够用.md  听不懂的环境配置.md  如何切换python环境.md  底层设计优化.md
notes/knowledge/power_electronic/: 02_power_electronic_device.md  04_dc_to_dc.md  (+1 more)
notes/opencv/: environment_configuration.md
qt6_template/: CMakeLists.txt  Readme.md  main.cpp
test/: CMakeLists.txt  Readme.md  create_dir.sh
test/.github/: copilot-instructions.md
test/User/: CMakeLists.txt
(+159 files in other folders)
